Changelog
=========


1.3 (unreleased)
----------------

- Update grid filters.
  [jone]

- Add a generic setup profile ``grid-filter`` which registers the necessary
  resources (JS / CSS) for using the ExtJS grid filter plugin.
  [jone]


1.2 (2012-09-27)
----------------

- Add z3c.autoinclude entry point (target=plone).
  [jone]

- Prepare for public release.
  [jone]

- Move package to github and clean it up.
  [jone]


1.1 (2012-04-16)
----------------

- Update to extjs v3.4 for ie9 compatibilities.
  [eschmutz]