@@ -5,6 +5,9 @@ Changelog
 1.3 (unreleased)
 ----------------
 
+- DateFilter: add a patch for date conversion on default values
+  [jone]
+
 - Update grid filters.
   [jone]
 
